@@ -21,6 +21,7 @@ python-hildon (0.9.0-1maemo9) UNRELEASED; urgency=low
     + hildon.WindowStack.push{,_list}
     + hildon.WindowStack.pop_and_push{,_list}
     + hildon.WindowStack.get_windows.
+  * Implement override for hildon.TimeButton.get_time. Fixes MB#4749.
 
  -- Anderson Lizardo <anderson.lizardo@indt.org.br>  Tue, 23 Jun 2009 11:57:38 -0400
 
